@@ -378,7 +378,7 @@ GNULIB_TOOL = $(GNULIB_CHECKOUT)/gnulib-tool-patched --import \
 GNULIB_CORE = no-c++ stdint stdbool havelib gettext localcharset \
 	uniwidth/width streq uniname/uniname unitypes link-follow \
 	host-cpu-c-abi socklen sockets close-hook \
-	nocrash libsigsegv gnu-make gettimeofday getpagesize sys_time
+	nocrash libsigsegv gnu-make gettimeofday getpagesize sys_time sys_wait
 # these modules are included as dependencies by regexp and fnmatch
 # so we include them here so that they appear once in src/gl*
 # instead of N times in $(GNULIB_USERS)/gl*
