@@ -112,6 +112,7 @@ gt_LC_MESSAGES dnl DEFS HAVE_LC_MESSAGES
 CL_RLIMIT dnl DEFS HAVE_GETRLIMIT, HAVE_SETRLIMIT, RLIMIT_RESOURCE_T, SETRLIMIT_CONST
 AC_FUNC_VFORK dnl DEFS HAVE_VFORK_H, vfork
 CL_WAITPID dnl DEFS PID_T
+gl_SYS_WAIT_H
 CL_RUSAGE dnl DEFS HAVE_SYS_RESOURCE_H, HAVE_GETRUSAGE, RUSAGE_WHO_T, HAVE_SYS_TIMES_H
 CL_STAT        dnl DEFS HAVE_LSTAT etc
 CL_ELOOP       dnl DEFS ELOOP_VALUE
