@@ -9,7 +9,7 @@
 # the same distribution terms as the rest of that program.
 #
 # Generated by gnulib-tool.
-# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=src/gllib --m4-base=src/glm4 --doc-base=doc --tests-base=tests --aux-dir=src/build-aux --no-libtool --macro-prefix=gl --no-vc-files alloca alloca-opt close-hook extensions getpagesize gettext gettimeofday gnu-make havelib host-cpu-c-abi include_next libsigsegv link-follow localcharset mbrtowc mbsinit mbsrtowcs memchr nl_langinfo no-c++ nocrash sockets socklen stdbool stdint streq string sys_time uniname/uniname unitypes uniwidth/width verify wchar wctype
+# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=src/gllib --m4-base=src/glm4 --doc-base=doc --tests-base=tests --aux-dir=src/build-aux --no-libtool --macro-prefix=gl --no-vc-files alloca alloca-opt close-hook extensions getpagesize gettext gettimeofday gnu-make havelib host-cpu-c-abi include_next libsigsegv link-follow localcharset mbrtowc mbsinit mbsrtowcs memchr nl_langinfo no-c++ nocrash sockets socklen stdbool stdint streq string sys_time sys_wait uniname/uniname unitypes uniwidth/width verify wchar wctype
 
 AUTOMAKE_OPTIONS = 1.5 gnits subdir-objects
 
@@ -697,6 +697,29 @@ MOSTLYCLEANFILES += sys/time.h sys/time.h-t
 EXTRA_DIST += sys_time.in.h
 
 ## end   gnulib module sys_time
+
+## begin gnulib module sys_wait
+
+BUILT_SOURCES += sys/wait.h
+
+# We need the following in order to create <sys/wait.h> when the system
+# has one that is incomplete.
+sys/wait.h: sys_wait.in.h
+	$(AM_V_at)$(MKDIR_P) sys
+	$(AM_V_GEN)rm -f $@-t $@ && \
+	{ echo '/* DO NOT EDIT! GENERATED AUTOMATICALLY! */'; \
+	  sed -e 's|@''INCLUDE_NEXT''@|$(INCLUDE_NEXT)|g' \
+	      -e 's|@''PRAGMA_SYSTEM_HEADER''@|@PRAGMA_SYSTEM_HEADER@|g' \
+	      -e 's|@''NEXT_SYS_WAIT_H''@|$(NEXT_SYS_WAIT_H)|g' \
+	      < $(srcdir)/sys_wait.in.h; \
+	} > $@-t && \
+	mv $@-t $@
+MOSTLYCLEANFILES += sys/wait.h sys/wait.h-t
+MOSTLYCLEANDIRS += sys
+
+EXTRA_DIST += sys_wait.in.h
+
+## end   gnulib module sys_wait
 
 ## begin gnulib module uniname/base
 
